feat:执行上下文栈

--- a/javaScript/1.作用域.md
+++ b/javaScript/1.作用域.md
@@ -3,28 +3,48 @@
 
 负责收集和维护声明的变量，决定当前执行代码对这些变量的访问权限的一套规则。
 
-在javaScript中采用的是词法作用域（静态作用域），函数的定义在创建的时候就决定了。
-
+在javaScript中采用的是词法作用域（静态作用域），
 而与词法作用域相对的是动态作用域，函数的作用域是在函数调用的时候才决定的。
 
-例子：
+词法作用域是定义在词法阶段的作用域，也就是说作用域是在我们写代码时将变量、函数、块作用域写在哪决定的，
+因此当词法分析器处理代码时会保持作用域不变（大部分情况下是这样的）。
+
+也有一些欺骗作用域的方法在词法分析器后依旧可以改变作用域。
+
+作用域例子：
 
 ```bash
-var value = 1;
+    var value = 1;
 
-function foo1(){
-    console.log(value)
-}
+    function foo1(){
+        console.log(value)
+    }
 
-function foo2(){
-    var value = 2;
-    foo1()
-}
+    function foo2(){
+        var value = 2;
+        foo1()
+    }
 
-foo2()
+    foo2()
 ```
+
 用javaScript中的词法作用域进行分析：
 
 ```bash
    执行foo1(),查找foo1内部是否存在局部变量value,没找到向上级作用域中找到 var value = 1; 打印 1 
+```
+
+## 欺骗词法（eval）
+
+eval
+例子：
+
+```bash
+    function foo(str,a){
+        eval(str) //欺骗
+        console.log(a,b)
+    }
+    
+    var b = 2;
+    foo("var b = 3",1) // 1、3
 ```
