feat:执行上下文

--- a/javaScript/2.执行上下文栈.md
+++ b/javaScript/2.执行上下文栈.md
@@ -1,13 +1,12 @@
 
 ## 什么是执行上下文栈
 
-javaScript引擎并非是一行一行分析、执行的，而是一段一段分析执行，当执行一段代码时他会有一个
+1、javaScript引擎并非是一行一行分析、执行的，而是一段一段分析执行，当执行一段代码时他会有一个
 准备工作也就是执行上下文。
 
-当然我们写的函数多了去了，也就是会创建出很多执行上下文，如何管理这些执行上下文呢？
-
-所以 JavaScript 引擎创建了执行上下文栈（Execution context stack，ECS）来管理执行上下文,
-执行上下文栈遵循 先进后出 原则。
+2、当然我们写的函数多了去了，也就是会创建出很多执行上下文，如何管理这些执行上下文呢？
+   所以 JavaScript 引擎创建了执行上下文栈（Execution context stack，ECS）来管理执行上下文,
+   执行上下文栈遵循 先进后出 原则。
 
 为了模拟执行上下文栈的行为，让我们定义执行上下文栈是一个数组：
 
