--- a/javaScript/3.执行上下文.md
+++ b/javaScript/3.执行上下文.md
@@ -14,47 +14,7 @@
 一个执行上下文的生命周期可以分为两个阶段。
 
 * 创建阶段
-  在这个阶段中，执行上下文会分别创建变量对象，建立作用域链，以及确定this的指向。
+  在这个阶段中，执行上下文会分别创建变量对象，建立作用域链，创建this属性。
 
 * 代码执行阶段
-  创建完成之后，就会开始执行代码，这个时候，会完成变量赋值，函数引用，以及执行其他代码。
-
-### 变量对象
-
-变量对象是与执行上下文相关的数据作用域，存储了在上下文中定义的变量和函数声明。
-
-
-###### 全局上下文
-
-1、在全局上下文中的变量对象就是全局对象
-
-2、全局对象是由 Object 构造函数实例化的一个对象	
-
-```js
-console.log(windows instanceof Object);
-console.log(this instanceof Object);
-```
-
-###### 函数上下文
-
-在函数上下文中未进入执行阶段之前，变量对象(VO)中的属性都不能访问！但是进入执行阶段之后，
-变量对象(VO)转变为了活动对象(AO)，里面的属性都能被访问了，然后开始进行执行阶段的操作。
-
-1、在函数上下文中，用活动对象（activation object, AO）表示变量对象
-
-2、活动对象和变量对象其实是一个东西，只是变量对象是规范上的或者说是引擎实现上的，不可在 JavaScript 环境中访问，
-   只有到当进入一个执行上下文中，这个执行上下文的变量对象才会被激活，所以才叫 activation object 呐，而只有被激活的变量对象，
-   也就是活动对象上的各种属性才能被访问。
-
-3、活动对象是在进入函数上下文时刻被创建的，它通过函数的arguments 属性初始化。arguments 属性值是 Arguments 对象。
-
-
-4、变量对象会分成两个阶段进行处理：
-
-   * 进入执行上下文
-   * 代码执行
-
-进入执行上下文：
-```js
-
-```
+  创建完成之后，就会开始执行代码，这个时候，会完成变量赋值，函数引用，确认this指向，以及执行其他代码。
