--- a/javaScript/6.执行上下文-this.md
+++ b/javaScript/6.执行上下文-this.md
@@ -14,7 +14,10 @@ function foo(){
 }
 var a = 2;
 foo() // 2
+```
 
+如果foo运行在严格模式下，默认绑定会为undefined
+```js
 function foo(){
     "use strict"
     console.log(this.a)
@@ -44,7 +47,7 @@ obj.foo()是隐式绑定。foo是作为obj方法而调用的，那么谁调用fo
 隐式绑定规则会把函数调用中的this绑定到这个上下文对象。因为调用foo()时this被绑定到obj，因此this.a和obj.a是一样的。
 */
 ```
-对象属性引用链中只有上一层或者说最后一层在调用位置中起作用。
+对象属性引用链中最后一层在调用位置中起作用,如：xxx1.xxx2.fn() 只需要关注最后一层及xxx2。
 
 ```js
 function foo(){
@@ -61,8 +64,7 @@ var obj2 = {
 obj2.obj1.foo() // 42
 ```
 
-一个最常见的this绑定问题就是被隐式绑定的函数会丢失绑定对象，也就是说它会应用默认绑定，
-从而把this绑定到全局对象或者undefined上，取决于是否是严格模式。
+一个最常见的this绑定问题就是被隐式绑定的函数会丢失绑定对象，也就是说它会使用默认绑定
 
 ```js
 function foo(){
@@ -83,8 +85,15 @@ obj.foo()
 /*
 输出
 2 1 1
+
+obj.foo() 应用了隐式绑定，
+1、console.log(this.a) 打印 obj.a 也就是 2
+2、函数中的内部函数默认指向windows
 */
 ```
+
+参数传递其实就是一种隐式赋值，因此传入函数时也会被隐式赋值，
+所以此时使用的是默认绑定规则，引用的是foo本身。
 
 ```js
 function foo(){
@@ -96,15 +105,10 @@ var obj = {
 }
 var a = 1;
 
-delogFn(obj.foo)
+delogFn(obj.foo) // 1
 function delogFn(fn){
     fn()
 }
-/*
-输出
-1
-参数传递其实就是一种隐式赋值，因此我们传入函数时也会被隐式赋值，所以此时使用的是默认绑定规则，引用的是foo本身。
-*/
 ```
 
 ### 显示绑定
@@ -140,4 +144,29 @@ function foo(){
 }
 var bar = new foo()
 //this ==> foo()
+```
+
+this面试题
+```js
+var number = 5;
+var obj = {
+    number: 3,
+    fn1: (function () {
+        var number;
+        this.number *= 2;
+        number = number * 2;
+        number = 3;
+        return function () {
+            var num = this.number;
+            this.number *= 2;
+            console.log(num);
+            number *= 3;
+            console.log(number);
+        }
+    })()
+}
+var fn1 = obj.fn1;
+fn1.call(null);
+obj.fn1();
+console.log(window.number);
 ```
