--- a/javaScript/5.执行上下文-作用域链.md
+++ b/javaScript/5.执行上下文-作用域链.md
@@ -38,5 +38,5 @@ bar.[[scope]] = [
 
 此时的执行上下文中的作用域链为：
 ```js
-Scope = [this.AO].concat([[Scope]]) [[Scope]]=>函数创建时的作用域链
+Scope = [this.AO].concat([[Scope]]) //[[Scope]]=>函数创建时的作用域链
 ```
