--- a/javaScript/7.原型、原型链.md
+++ b/javaScript/7.原型、原型链.md
@@ -1,5 +1,55 @@
 
 ## 原型
 
+对象都是通过函数来创建的
+每个JavaScript对象（null除外）在创建的时候都会关联另一个对象，这个对象就是我们所说的原型，每一个对象都会从原型继承属性。
+
 每一个函数都有一个属性protoType，这个属性的值是一个对象，对象中默认有一个constructor属性指向函数本身。   
 通过new 函数创建的实例都有一个 _proto_ 属性指向函数原型 protoType
+
+
+### __proto__
+
+每一个JavaScript对象（null除外）都具有的一个属性叫 '__proto__' , 这个属性指向该对象的原型。
+
+```js
+function Person() {
+ 
+}
+var person = new Person();
+console.log(person.__proto__ === Person.prototype); // true
+```
+
+### constructor
+
+每个原型都有一个constructor属性指向关联的构造函数。
+
+```js
+function Person() { 
+
+} 
+console.log(Person === Person.prototype.constructor); // true
+```
+
+### 原型链
+
+通过new 构造函数创建的实例，实例访问属性时，先在自身属性中查找，如果没有，再沿着_proto_这条链向上找，这就是原型链
+
+```js
+function Person(){
+    this.name = '小明'
+}
+Person.protoType.getName = function(){
+    return this.name
+}
+
+const foo = new Person();
+foo.getName();
+```
+
+### hasOwnProperty
+
+判断一个属性到底是本身的属性还是从原型中找到的
+```js
+foo.hasOwnProperty('name')
+```
