--- a/javaScript/9.this.绑定-apply.md
+++ b/javaScript/9.this.绑定-apply.md
@@ -1,6 +1,7 @@
 
 ```js
-function myApply(context,...arg){
-    
+function myApply(context,arg){
+    const newContext =  context || window;
+    newContext.fn = this;
 }
 ```
