--- a/javaScript/7.原型、原型链.md
+++ b/javaScript/7.原型、原型链.md
@@ -5,7 +5,8 @@
 每个JavaScript对象（null除外）在创建的时候都会关联另一个对象，这个对象就是我们所说的原型，每一个对象都会从原型继承属性。
 
 每一个函数都有一个属性protoType，这个属性的值是一个对象，对象中默认有一个constructor属性指向函数本身。   
-通过new 函数创建的实例都有一个 _proto_ 属性指向函数原型 protoType
+通过new 函数创建的实例都有一个 _proto_ 属性指向函数原型 protoType,默认所有函数的原型都是Object的
+一个实例，也就是说这个实例也有一个内部指针 _proto_ 指向Object的原型
 
 
 ### __proto__
