--- a/javaScript/6.执行上下文-this.md
+++ b/javaScript/6.执行上下文-this.md
@@ -134,7 +134,7 @@ foo.call(obj);     // "bar2"  显式绑定，使用obj作为"this"
 如果把new这个关键字放在一个函数调用的前面，JS编译器会做这四件事情：
 
 创建一个新的空的对象
-把这个对象链接到原型对象上
+把这个对象的_proto_指向构造函数的原型对象（prototype）上
 这个对象被绑定为this
 如果这个函数不返回任何东西，那么就会默认return this
 
