--- a/javaScript/11.事件循环机制.md
+++ b/javaScript/11.事件循环机制.md
@@ -1,10 +1,26 @@
 
-## 运行图片
-['./image/event_loop.png']
+## 事件循环机制 （event loop）
 
-## 运行过程
+1、事件循环属于js的执行机制, js将所有执行的代码分为同步任务和异步任务。
 
-1.当 js 运行时，碰到同步任务，就在stack里执行
-2.一旦碰到异步任务，主线程会挂起这个任务，把异步回调结果放在callback queue里。
-3.等待当前stack中的所有任务都执行完毕，主线程处于闲置状态时，主线程会去查找callback queue是否有任务。如果有，那么主线程会从中取出回调（此处区分宏任务与微任务）放入stack中，然后执行其中的同步代码...，如此反复。
-由于第三步，这样就形成了一个无限的循环。这就是这个过程被称为“事件循环（Event Loop）”的原因
+2、同步任务和异步任务最主要的差别就是，同步任务发起调用后，很快就可以得到结果，
+   而异步任务是无法立即得到结果，比如请求接口，每个接口都会有一定的响应时间，根据网速、服务器等等因素决定，
+   再比如定时器，它需要固定时间后才会返回结果。
+
+3、当js运行时，碰到同步任务，就会在执行栈里执行。
+
+4、一旦碰都异步任务，主线程就会挂起这个任务，把异步回调结果放到 callback queue 里，紧接着调用栈会将这个任务移除。
+
+5、等待当前执行栈中的所有同步任务都执行完成了，主线程处于闲置状态时，主线程就会去 callback queue(任务队列) 查看是否有任务，
+   如果有主线程就会callback queue(任务队列)中取出任务放到执行栈中执行, 如此反复
+
+6、由于第五步，这样就形成了一个无限的循环。这个过程被称为“事件循环（Event Loop）”
+
+## 运行流程图  
+![event_loop](/image/event_loop.png)
+
+## callback queue(任务队列)
+
+在任务队列中，其实还分为宏任务队列（Task Queue）和微任务队列（Microtask Queue），对应的里面存放的就是宏任务和微任务。
+
+异步任务不是直接进入任务队列的
