--- a/javaScript/11.事件循环机制.md
+++ b/javaScript/11.事件循环机制.md
@@ -19,8 +19,36 @@
 ## 运行流程图  
 ![event_loop](/image/event_loop.png)
 
-## callback queue(任务队列)
+## Task queue(任务队列)
 
-在任务队列中，其实还分为宏任务队列（Task Queue）和微任务队列（Microtask Queue），对应的里面存放的就是宏任务和微任务。
+任务队列Task Queue，即队列，是一种先进先出的一种数据结构。
+分为宏任务队列（MacroTask）和微任务队列（MicroTask）
+![event_loop](/image/Task_Queue.png)
 
-异步任务不是直接进入任务队列的
+## 宏任务（MacroTask）
+
+```js
+script全部代码
+
+setTimeout
+
+setInterval
+
+setImmediate（浏览器暂时不支持，只有IE10支持，具体可见MDN）
+
+I/O
+
+UI Rendering
+```
+
+## 微任务 （MicroTask）
+
+```js
+Process.nextTick（Node独有）
+
+Promise
+
+Object.observe(废弃)
+
+MutationObserver
+```
